  consisting of Robert Widhopf-Fenk, Ulrich Müller and Uday S Reddy.
  In recent months, Arik Mitschang and Tim Cross have joined us as
  contributors.  More volunteers to help with the maintenance are
  quite welcome.

  Bug reports should be sent by using M-x vm-submit-bug-report.  Enjoy
  using VM! - Rob, Ulrich and Uday
  
VM 8.2.0a (2011-02-28)

  CHANGES

   * The variable name `vm-mime-attachment-infer-type-for-text-attachments'
     changed to `vm-infer-mime-types-for-text'.  (See the info manual

   * Plain text forwarding has been extended to deal with MIME
     attachments.  The `z' command uses this method, i.e., it does
     NOT encapsulate forwarded messages (unlike in version 8.1.x).

     There is a new key binding of `Z' to
     `vm-forward-message-encapsulated' which forwards messages in
     encapsulated form (mime, rfc934 or rfc1153).  The setting of
     `vm-forwarding-digest-type' controls this command.  The default
     forwarding-digest-type is "mime".  You should check and remove
     any setting of this variable in your init file, unless you want a
     forwarding-digest-type different from MIME.

   * The meaning of the variable `vm-included-mime-types-list' is
     changed.  It need only mention MIME type/subtype pairs that are
     not handled by default.  The types "text/plain", "text/enriched"
     and "message/rfc822" are now handled by default.

   * The attributes vector has been expanded to 16 elements for
     compatibility with Mozilla Thunderbird.  The first time a folder
     is written, this will cause extra time to be taken for "stuffing"
     the attributes.  But this is only a one-time cost.

   * New variable `vm-include-mime-attachments' allows the inclusion of
     MIME attachments in replies.  This functionality was originally
     part of vm-pine.el under the name `vm-mime-yank-attachments'.
     That functionality is now obsolete.  Replace references to